add block template

--- a/jobs/templates/layout.html
+++ b/jobs/templates/layout.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>Job Board</title>
@@ -9,10 +9,7 @@
   </head>
   <body>
     <div class="container top">
-      <div class="content">
-        {% block content %}
-        {% endblock %}
-      </div>
+      <div class="content">{% block content %}{% endblock %}</div>
     </div>
   </body>
 </html>
